--- a/ComicDownloader/app.config
+++ b/ComicDownloader/app.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ComicDownloader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="ElementSample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
@@ -11,12 +12,12 @@
       <target name="logfile" xsi:type="File" fileName="log.txt" layout="${longdate} ${callsite} ${level} ${message}"/>
       <target name="console" xsi:type="Console" />
       <target xsi:type="EventLog"
-				 name="event"
-				 layout="${message}"
-				 source="MyProgram"
-				 eventId="555"
-				 log="Application"
-					 />
+     name="event"
+     layout="${message}"
+     source="MyProgram"
+     eventId="555"
+     log="Application"
+      />
     </targets>
     <rules>
       <logger name="*" minLevel="Error" writeTo="event" />
@@ -26,6 +27,14 @@
 
   </nlog>
   <userSettings>
+    <ComicDownloader.Properties.Settings>
+      <setting name="ShowScriptErrors" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FilterLevel" serializeAs="String">
+        <value />
+      </setting>
+    </ComicDownloader.Properties.Settings>
     <ElementSample.Properties.Settings>
       <setting name="test" serializeAs="String">
         <value>test</value>
