--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -1413,6 +1413,9 @@
     <None Include="Resources\1365340186_Pause.png" />
     <None Include="Resources\1365430905_internet-radio-new.png" />
     <None Include="Resources\1365493287_web.png" />
+    <None Include="Resources\1365535542_reload.png" />
+    <None Include="Resources\1365535653_Process-Accept.png" />
+    <None Include="Resources\1365535741_select_by_adding_to_selection.png" />
     <Content Include="Resources\14747480-bang-comic-book-explosion.jpg" />
     <Content Include="3rd\itextsharp.dll" />
     <Content Include="3rd\Cx.Windows.Forms\MdiTabStrip.bmp" />
