--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -373,6 +373,12 @@
     <Compile Include="Forms\ChapterReader.Designer.cs">
       <DependentUpon>ChapterReader.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SearchForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SearchForm.Designer.cs">
+      <DependentUpon>SearchForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DownloaderForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -1076,6 +1082,9 @@
     <EmbeddedResource Include="Forms\ChapterReader.resx">
       <DependentUpon>ChapterReader.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SearchForm.resx">
+      <DependentUpon>SearchForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DownloaderForm.resx">
       <DependentUpon>DownloaderForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -1416,6 +1425,8 @@
     <None Include="Resources\1365535542_reload.png" />
     <None Include="Resources\1365535653_Process-Accept.png" />
     <None Include="Resources\1365535741_select_by_adding_to_selection.png" />
+    <None Include="Resources\1365576001_search.png" />
+    <None Include="Resources\1365576100_Search.png" />
     <Content Include="Resources\14747480-bang-comic-book-explosion.jpg" />
     <Content Include="3rd\itextsharp.dll" />
     <Content Include="3rd\Cx.Windows.Forms\MdiTabStrip.bmp" />
