--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -1470,6 +1470,9 @@
     <None Include="Resources\1365576001_search.png" />
     <None Include="Resources\1365576100_Search.png" />
     <Content Include="Resources\1365624464_27877.ico" />
+    <None Include="Resources\1365685971_Information.png" />
+    <None Include="Resources\1365686523_web.png" />
+    <None Include="Resources\1365686491_Information.png" />
     <Content Include="Resources\14747480-bang-comic-book-explosion.jpg" />
     <Content Include="3rd\itextsharp.dll" />
     <Content Include="3rd\Cx.Windows.Forms\MdiTabStrip.bmp" />
