--- a/ComicDownloader/ComicDownloader.csproj
+++ b/ComicDownloader/ComicDownloader.csproj
@@ -84,6 +84,9 @@
       <HintPath>3rd\Microsoft.SPOT.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>packages\Newtonsoft.Json.5.0.3\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NLog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>3rd\NLog.dll</HintPath>
@@ -1446,6 +1449,7 @@
     <None Include="HTML\treetable\.gitignore" />
     <None Include="HTML\treetable\README.md" />
     <None Include="HTML\treetable\treetable.jquery.json" />
+    <None Include="packages.config" />
     <None Include="Properties\IViewSettings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>IViewSettings.Designer.cs</LastGenOutput>
